update requirements.txt for virtualenv

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
-pyqt
-pandas
-yaml
-nipy
-glob
-json
-
+mpmath==1.0.0
+nibabel==2.2.1
+nipy==0.4.1
+numpy==1.13.3
+pandas==0.21.0
+PyQt5==5.9.2
+python-dateutil==2.6.1
+pytz==2017.3
+PyYAML==3.12
+sip==4.19.6
+six==1.11.0
+sympy==1.1.1
+xlrd==1.1.0
